n8n-aws-docker-k8s/modules/ec2/security_group.tf
resource "aws_security_group" "n8n" {
  name_prefix = "${var.instance_name}-sg-"
  vpc_id      = aws_vpc.n8n.id

  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
